--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -8,10 +8,10 @@ spec:
   replicas: 6
   minReadySeconds: 10
   strategy:
+    type: RollingUpdate
     rollingUpdate:
       maxSurge: 2
       maxUnavailable: 0
-    type: RollungUpdate
   selector:
     matchLabels:
       app: java
@@ -19,17 +19,16 @@ spec:
     metadata:
       labels:
         app: java
-   sec:
-    containers:
-    - name: java
-      #image: <account-id>.dkr.ecr.<region>.amazonaws.com/<repository-name>:<tag>
-      image: 453229563354.dkr.ecr.us-west-2.amazonaws.com/java-application:10
-      ports:
- - containerPort: 8080
+    spec:
+      containers:
+        - name: java
+          image: 453229563354.dkr.ecr.us-west-2.amazonaws.com/java-application:10
+          ports:
+            - containerPort: 8080
 
 ---
 apiVersion: v1
-kind: service
+kind: Service
 metadata:
   name: java-app-services
   labels:
